syntax="proto2";

package aap_protobuf.shared;

enum MessageStatus {
  STATUS_UNSOLICITED_MESSAGE = 1;
  STATUS_SUCCESS = 0;
  STATUS_NO_COMPATIBLE_VERSION = -1;
  STATUS_CERTIFICATE_ERROR = -2;
  STATUS_AUTHENTICATION_FAILURE = -3;
  STATUS_INVALID_SERVICE = -4;
  STATUS_INVALID_CHANNEL = -5;
  STATUS_INVALID_PRIORITY = -6;
  STATUS_INTERNAL_ERROR = -7;
  STATUS_MEDIA_CONFIG_MISMATCH = -8;
  STATUS_INVALID_SENSOR = -9;
  STATUS_BLUETOOTH_PAIRING_DELAYED = -10;
  STATUS_BLUETOOTH_UNAVAILABLE = -11;
  STATUS_BLUETOOTH_INVALID_ADDRESS = -12;
  STATUS_BLUETOOTH_INVALID_PAIRING_METHOD = -13;
  STATUS_BLUETOOTH_INVALID_AUTH_DATA = -14;
  STATUS_BLUETOOTH_AUTH_DATA_MISMATCH = -15;
  STATUS_BLUETOOTH_HFP_ANOTHER_CONNECTION = -16;
  STATUS_BLUETOOTH_HFP_CONNECTION_FAILURE = -17;
  STATUS_KEYCODE_NOT_BOUND = -18;
  STATUS_RADIO_INVALID_STATION = -19;
  STATUS_INVALID_INPUT = -20;
  STATUS_RADIO_STATION_PRESETS_NOT_SUPPORTED = -21;
  STATUS_RADIO_COMM_ERROR = -22;
  STATUS_AUTHENTICATION_FAILURE_CERT_NOT_YET_VALID = -23;
  STATUS_AUTHENTICATION_FAILURE_CERT_EXPIRED = -24;
  STATUS_PING_TIMEOUT = -25;
  STATUS_COMMAND_NOT_SUPPORTED = -250;
  STATUS_FRAMING_ERROR = -251;
  STATUS_UNEXPECTED_MESSAGE = -253;
  STATUS_BUSY = -254;
  STATUS_OUT_OF_MEMORY = -255;
}